--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Boyes'n'berry Cleaning</title>
+		<title>Flash Cleaning: Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Boyes'n'berry Cleaning</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Flash Cleaning</span>
 								</a>
 
 							<!-- Nav -->
