--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Flash Cleaning: About Us</title>
+		<title>Flash Cleaning: Contact Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">About Us</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Contact Us</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,33 +36,35 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="about.html">About Us</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Cherie</h1>
-							<span class="image main"><img src="images/cherie.jpg" alt="" /></span>
-							<p><b>Affordable. Efficient. Professional</b><br >Cherie Boyes is a happy and charasmatic young woman who enjoys cleaning and always gets the job done in time with professional results.</p>
+							<h1>Contact Methods</h1>
+
+							<!-- Buttons -->
+								<section>
+									<ul class="actions"><li><a href="tel:0434 595 833" class="button">Phone</a></li>
+
+<li><a href="mailto:cherie1231@hotmail.com" class="button">Email</a></li>
+
+<li><a href="https://www.facebook.com/cherieboyes" class="button">Facebook</a></li>
+
+<li><a href="https://www.instagram.com/killitwithkindness/" class="button">Instagram</a></li></ul>
+</section>
+
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="mailto:cherie1231@hotmail.com">
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
-								</form>
-							</section>		
 
 							<ul class="copyright">
-								<li>&copy; Cherie Boyes. All rights reserved.</a></li>
+								<li>&copy; Cherie Boyes. All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
